kubernetes/prod/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banners-main-app
  labels:
    environment: production
    # Standard Kubernetes/ArgoCD Tracking
    app.kubernetes.io/name: django-backend
    app.kubernetes.io/part-of: banners-main-app
    # Security: Pod Security Admission (PSA)  (only for namespace)
    # 'baseline' prevents privileged (root-level) host access and restrict will warn devs
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
  annotations:
    # ownership and finops tracking
    support/team: "backend-engineering"
    support/slack-channel: "#alerts-banner-prod"
    billing/cost-center: "cc-python-apps"
